--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <title> Mi pagina </title>
     <style>
@@ -39,6 +40,7 @@
         <p> Despues ese partido estaba muy nervioso que me llegen a pegar devuelta y no podia atajar bien, en el entretiempo mi psicologa (que tenia en el club) me ayudo a tranquilizarme y pude volver al segundo tiempo mejor y mas seguro, resulta que despues nos empatan el partido que me hicieron 2 goles, fuimos a penales que esos penlaes yo ataje 2 y erraron uno que resulta q habiamos que quedamos como campeones y ahi volvi mas feliz y estaba re contento</p>
         <P> Porque ese partido estuvo mis padres, mi hermano, mi abuela y mi tio que nunca fue a un partido mio y unos amigos de mi papa, termine el partido los padres tanto como el Club me felicitaron porque ganamos y quedamos campeon con 18 puntos y 4 goles a favor del torneo y despues no jugue mas porque entre a 4to año y ya tuve que dejar muchas cosas de lado por los estudios </P>
         <p> despues de que empece 4to año deicidi irme a Buenos Aires a jugar alla y estudiar alla tambien, pero mis padres no me dejaron porque ya tenia una parte echo aca en neuquen y bueno no pude ir y despues de unos meses intente salir a correr y anotarme a un gimnasio para no peder la resistencia y el estado fisico y dentro de lo que llevo del año voy bien me gusta hacer deporte, soy muy deportista creo yo que se hacer todos los deportes porque es algo que realmente me gusta</p>
+        <p> Enzo Soto</p>
 
 
     <section class="contact">
