--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -42,6 +42,7 @@
         <p> despues de que empece 4to año deicidi irme a Buenos Aires a jugar alla y estudiar alla tambien, pero mis padres no me dejaron porque ya tenia una parte echo aca en neuquen y bueno no pude ir y despues de unos meses intente salir a correr y anotarme a un gimnasio para no peder la resistencia y el estado fisico y dentro de lo que llevo del año voy bien me gusta hacer deporte, soy muy deportista creo yo que se hacer todos los deportes porque es algo que realmente me gusta</p>
         <p> Enzo soto</p>
         <p> motocross </p>
+        <p> epet 20 </p>
 
 
     <section class="contact">
