--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -43,8 +43,8 @@
         <p> Enzo soto</p>
         <p> motocross </p>
         <p> epet 20 </p>
-        <p> widermann </p> 
-        
+        <p> widermann </p>
+        <p> exequiel </p>
 
     <section class="contact">
         <h2>Contacto</h2>
