--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -47,6 +47,7 @@
         <p> exequiel </p>
         <p> Modificar HTML 5</p>
         <p> Vamos  tomar mates? </p>
+        <p> Error ed commit </p>
     <section class="contact">
         <h2>Contacto</h2>
         <ul>
