--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -49,6 +49,7 @@
         <p> Vamos  tomar mates? </p>
         <p> Error ed commit </p>
         <p> Mates </p>
+        <p> Me gusta programar </p>
 
 
     <section class="contact">
