--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -50,7 +50,7 @@
         <p> Error ed commit </p>
         <p> Mates </p>
         <p> Me gusta programar </p>
-
+        <p> Me gustan los autos </p>
 
     <section class="contact">
         <h2>Contacto</h2>
