--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -51,6 +51,7 @@
         <p> Mates </p>
         <p> Me gusta programar </p>
         <p> Me gustan los autos </p>
+        <p> Elimino separacion de mi Pagina Web </p>
 
     <section class="contact">
         <h2>Contacto</h2>
