--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -52,7 +52,7 @@
         <p> Me gusta programar </p>
         <p> Me gustan los autos </p>
         <p> Elimino separacion de mi Pagina Web </p>
-        <p> Mi PAgina Web </p>
+        <p> Autos deporrivos </p>
 
     <section class="contact">
         <h2>Contacto</h2>
