--- a/pagina web enzo.html
+++ b/pagina web enzo.html
@@ -54,6 +54,7 @@
         <p> Elimino separacion de mi Pagina Web </p>
         <p> Autos deporrivos </p>
         <p> Camionetas OFF ROAD </p>
+        <p> Me gusta la programacion </p>
 
     <section class="contact">
         <h2>Contacto</h2>
